<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.gr02_20181.lab1.PlatosActivity"
    android:orientation="vertical"
    android:layout_margin="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:layout_weight="0">

        <ImageView
            android:id="@+id/imgBebida"
            android:layout_width="80dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_gallery" />

        <Button
            android:id="@+id/btnAgregarImgBebida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="60dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_camera"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtNombreBebida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/hintNombreBebida"
            android:inputType="textPersonName" />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelPrecioBebida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelPrecioBebida"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/txtPrecioBebida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="@string/hintPrecio"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/txtIngredientesBebida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="13"
            android:hint="@string/hintIngredientes"
            android:inputType="textPersonName" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAgregarBebida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnAgregarPlato"
            android:onClick="onClick" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutInfoBebida"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/imgBebidaGuardado"
            android:layout_width="200dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_gallery" />

        <TextView
            android:id="@+id/txtNombreBebidaGuardado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imgBebidaGuardado"
            android:text="" />


        <TextView
            android:id="@+id/txtPrecioBebidaMostrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgBebidaGuardado"
            android:text="@string/labelPrecio" />

        <TextView
            android:id="@+id/txtPrecioBebidaGuardado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgBebidaGuardado"
            android:layout_toRightOf="@id/txtPrecioBebidaMostrar"
            android:text="TextView" />

        <TextView
            android:id="@+id/txtIngredientesBebidaMostrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNombreBebidaGuardado"
            android:layout_toEndOf="@+id/imgBebidaGuardado"
            android:text="@string/txtIngredientes" />

        <TextView
            android:id="@+id/txtIngredientesBebidaGuardado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@+id/txtIngredientesBebidaMostrar"
            android:layout_alignBottom="@+id/txtIngredientesBebidaMostrar"
            android:layout_toEndOf="@+id/txtIngredientesBebidaMostrar"
            android:text="@string/txtIngredientes" />


    </RelativeLayout>


</LinearLayout>
